# Hackathon-2-Phase-I-TODOLIST

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh  test_imports.py
.gemini/commands/: sp.analyze.toml  sp.checklist.toml  sp.clarify.toml  sp.constitution.toml  sp.git.commit_pr.toml  sp.implement.toml  sp.phr.toml  sp.plan.toml  sp.specify.toml  sp.tasks.toml
.specify/memory/: constitution.md
history/prompts/phase-1/: 1-implement-in-memory-todo-cli-application.implementation.prompt.md  2-environment-troubleshooting-and-project-phase-assessment.misc.prompt.md  3-solve-errors-and-fix-tests.green.prompt.md
specs/: plan.md
specs/history/: todo-phase-1-.md
src/: main.py  manager.py
src/todo/: models.py  service.py  storage.py
tests/: test_manager.py  test_todo_cli.py
